--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "@gospeltoolbox/labs",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.2.0",
+    "@rails/webpacker": "^3.2.2",
+    "axios": "^0.18.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0",
     "coffeescript": "1.12.7",
+    "graphql.js": "^0.4.20",
     "jquery": "3",
-    "mdbootstrap": "^4.4.4"
+    "mdbootstrap": "^4.4.4",
+    "prop-types": "^15.6.0",
+    "pubsub-js": "^1.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react_ujs": "^2.4.4",
+    "store": "^2.0.12"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.0"
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
