--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,12 @@
 /node_modules
 
 runServer.cmd
-runtests.cmd
+runtests.cmd/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
+
+*.env
+localhost.crt
+localhost.key
