Adding initial port of serve team schedule from C#

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "coffeescript": "1.12.7",
     "graphql.js": "^0.4.20",
     "jquery": "3",
+    "lodash": "^4.17.5",
     "mdbootstrap": "^4.4.4",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
