--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ env:
   - RAILS_ENV=test
 before_script:
   - psql -c 'create database gtbox_labs_test;' -U postgres
-  - "rake db:migrate"
+  - rake db:migrate
+  
+install:
+  - yarn install
+  - bundle install --jobs=3 --retry=3
 
 services:
   - postgresql
