--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "3",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
+    "popper.js": "1",
     "prop-types": "^15.6.0",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "webpack": "3",
     "webpack-dev-server": "^2.11.1"
   }
 }
