Add ableton export notebook

--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -3,13 +3,13 @@ FROM jupyter/base-notebook
 USER root
 
 RUN apt-get update -y && \
-    apt install -y libtool libffi-dev ruby ruby-dev make
-RUN apt install -y libzmq3-dev libczmq-dev libsqlite3-dev
+    apt install -y  build-essential patch libtool libffi-dev ruby ruby-dev make
+RUN apt install -y libzmq3-dev libczmq-dev libsqlite3-dev zlib1g-dev liblzma-dev
 
 RUN gem install cztop iruby
 RUN iruby register --force
 
-RUN gem install pco_api sqlite3 google-api-client
+RUN gem install pco_api sqlite3 google-api-client zlib nokogiri
 
 RUN pip install numpy
 
