--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ env:
 before_script:
   - psql -c 'create database gtbox_labs_test;' -U postgres
   - rake db:migrate
+
+before_install:
+  - gem update --system
+  - gem install bundler
   
 install:
   - yarn install
