--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/webpacker": "^3.2.2",
     "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "4.1.2",
+    "bootstrap": ">=4.3.1",
     "coffeescript": "1.12.7",
     "graphql.js": "^0.4.20",
     "jquery": "3",
@@ -27,6 +27,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "webpack": "3",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
