--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,23 +1,46 @@
 version: '3'
 services:
+  proxy:
+    image: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/localhost.crt:/etc/nginx/localhost.crt:ro
+      - ./nginx/localhost.key:/etc/nginx/localhost.key:ro
+    depends_on:
+      - web
+
   web:
     build:
       context: ../
     command: sleep infinity
     environment:
       app_database_host: db
+      gtbox_account_clientId: 465c1aa4226cf2543a4379437c0b33019f89db9b2e7236c0db98377f765407bd
+      gtbox_account_secret: 63258394f01da87b49d0588121fb1c56994e8947e25677696d1ededa19c6a2e1
+      gtbox_account_host: https://account.gospeltoolbox.org
+      pco_client_id:
+      pco_secret:
+      spotify_client_id:
+      spotify_secret:
       RAILS_LOG_TO_STDOUT: 1
       RAILS_SERVE_STATIC_FILES: 1
-    ports:
-      - "80:80"
-    expose:
-      - "80"
     links:
       - db:db
     volumes:
       - ..:/src/gospeltoolbox/labs
 
   db:
-    image: postgres
+    image: postgres:10
+    ports:
+      - 5432:5432
     volumes:
       - ../tmp/db:/var/lib/postgresql/data
+
+  redis:
+    image: 'redis:4.0-alpine'
+    command: redis-server --requirepass 7JtFzwqxjxFsCHKe
+    volumes:
+      - ../tmp/redis:/data
