--- a/package.json
+++ b/package.json
@@ -2,31 +2,31 @@
   "name": "@gospeltoolbox/labs",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.2.2",
-    "axios": "^0.18.1",
+    "@rails/webpacker": "^4.3.0",
+    "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": ">=4.3.1",
+    "bootstrap": "^4.5.3",
     "coffeescript": "1.12.7",
     "graphql.js": "^0.4.20",
-    "jquery": "3",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.19",
-    "moment": "^2.20.1",
-    "popper.js": "1",
+    "moment": "^2.29.1",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.6.0",
-    "pubsub-js": "^1.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react_ujs": "^2.4.4",
+    "pubsub-js": "^1.9.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react_ujs": "^2.6.1",
     "store": "^2.0.12"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "webpack": "3",
-    "webpack-dev-server": ">=3.1.11"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
