--- a/dev/secrets.yml
+++ b/dev/secrets.yml
@@ -3,3 +3,6 @@ pco_secret: !var gtbox/pco_client_secret
 
 spotify_client_id: !var gtbox/spotify_client_id
 spotify_secret: !var gtbox/spotify_secret
+
+gtbox_account_client_id: !var gtbox/account_client_id
+gtbox_account_secret: !var gtbox/account_secret
