--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "@gospeltoolbox/labs",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.3.0",
-    "axios": "^0.18.0",
-    "babel-preset-react": "^6.24.1",
+    "@rails/webpacker": "^5.4.2",
+    "axios": "^0.21.4",
+    "@babel/preset-react": "^7.14.5",
     "bootstrap": "^4.5.3",
-    "coffeescript": "1.12.7",
     "graphql.js": "^0.4.20",
     "jquery": "^3.5.1",
     "lodash": "^4.17.19",
@@ -14,8 +13,8 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.6.0",
     "pubsub-js": "^1.9.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react_ujs": "^2.6.1",
     "store": "^2.0.12"
   },
@@ -26,7 +25,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.1.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.1"
   }
 }
